<resources>
    <string name="app_name">ListViewMultiBahasa</string>
    <string name="jenis_hewan">Jenis Hewan</string>
    <string name="lebah">Lebah</string>
    <string name="kura_kura">Kura - Kura</string>
    <string name="lumba_lumba">Lumba - Lumba</string>
    <string name="row_jenis">Lebah</string>
    <string name="daftar_ras_hewan">Daftar Ras Hewan</string>
    <string name="deskripsi_hewan">Deskripsi hewan</string>
    <string name="kembali">Kembali</string>
    <string name="name_kuraAustralia">Kura - Kura Australia</string>
    <string name="desc_kuraAustralia">Menjadi salah satu jenis kura-kura darat terbesar di Dunia, ukuran tubuh dari kura-kura yang memiliki tempurung kehitaman ini bisa mencapai 1.5 meter</string>
    <string name="name_kura_indonesia">Kura - Kura Indonesia</string>
    <string name="desc_kura_indoesia">jenis kura-kura satu ini termasuk jenis kura-kura peliharaan yang perawatannya cukup mudah. Ciri khas dari kura-kura ini adalah tempurungnya yang besar dan berwarna gelap serta memiliki permukaan yang licin</string>
    <string name="name_kura_paraguay">Kura - Kura Paraguay</string>
    <string name="desc_kura_paraguay">jenis kura-kura peliharaan yang berasal dari Brazil dan Paraguay ini terkenal akan kepalanya yang bulat dan berwarna jingga kemerahan seperti buah ceri</string>
    <string name="name_kura_afrika">Kura - Kura Afrika</string>
    <string name="desc_kura_afrika">Jenis kura-kura selanjutnya ini berasal dari Afrika dan terkenal akan kecantikan tempurungnya, kura-kura ini sangat sensitif terhadap perubahan cuaca dan iklim serta menyukai tempat-tempat yang hangat</string>
    <string name="name_kura_india">Kura - Kura India</string>
    <string name="desc_kura_india">kura-kura yang berasal dari India ini sangat mencolok karena pola tempurungnya yang membentuk pola seperti bintang</string>
    <string name="name_kura_madaskar">Kura - Kura Madagaskar</string>
    <string name="desc_kura_madaskar">Daya tarik utama kura-kura Radiata adalah pola tempurungnya yang merupakan perpaduan warna hitam dan warna kecokelatan yang kontras</string>
    <string name="name_LebahAsiaSelatan">Lebah Asia Selatan</string>
    <string name="desc_LebahAsiaSelatan">Apis Cerana ini memiliki sifat yang agresif, dan produksi madu tidak banyak</string>
    <string name="name_LebahAsiaTimur">Lebah Asia Timur</string>
    <string name="desc_LebahAsiaTimur">Per tahun lebah madu Mellifera ini bisa memproduksi madu sampai 40 kg per tahun per koloni</string>
    <string name="name_LebahIndonesia">Lebah Indonesia</string>
    <string name="desc_LebahIndonesia">Apis Dorsata ini memiliki ukuran fisik yang lebih besar dan memiliki sengatan yang lebih kuat</string>
    <string name="name_LebahFlores">Lebah Flores</string>
    <string name="desc_LebahFlores">Ini termasuk lebah yang langka. Ukurannya memang lebih kecil dibanding lebah madu lainnya, dan termasuk lebah liar. Sehingga tidak banyak yang bisa membudidayakannya</string>
    <string name="name_LebahIndonesia2">Lebah Indonesia</string>
    <string name="desc_LebahIndonesia2">Lebah madu ini memiliki bentuk fisik yang berbeda, baik dari warna maupun ukurannya. Selain itu lebah Trigona termasuk lebah madu yang tidak memiliki sengat</string>
    <string name="name_lumba_malaysia">Lumba - Lumba Malaysia</string>
    <string name="desc_lumba_malaysia">Lumba-lumba Fraser memiliki ukuran tubuh antara 2-2,7 meter dengan berat 160-210 kg</string>
    <string name="name_lumba_australia">Lumba - Lumba Australia</string>
    <string name="desc_lumba_australia">Lumba-lumba ini merupakan genus Steno ini berukuran mencapai 2,6 meter dengan berat sekitar 160 kg</string>
    <string name="name_lumba_indonesia">Lumba - Lumba Indonesia</string>
    <string name="desc_lumba_indonesia">Hewan berukuran 2,7 meter dengan berat mencapai 160 kg ini berstatus Least Concern</string>
    <string name="daftar_ras_kurakura">Daftar Ras Kura-Kura</string>
    <string name="daftar_ras_lebah">Daftar Ras Lebah</string>
    <string name="daftar_ras_lumbalumba">Daftar Ras Lumba_Lumba</string>
    <string name="kurakura_profil">Kura - Kura</string>
    <string name="lebah_profil">Lebah</string>
    <string name="lumbalumba_profil">Lumba - Lumba</string>
    <string name="hewan">Hewan</string>
    <string name="nama_hewan">nama hewan</string>
    <string name="name_lumba_amerika">Lumba - Lumba Amerika</string>
    <string name="desc_lumba_amerika">Panjang tubuhnya sekitar 2-4 meter dengan berat antara 135-635 kg.</string>
    <string name="name_lumba_indopasifik">Lumba - Lumba Indo-Pasifik</string>
    <string name="desc_lumba_indopasifik">Memiliki tubuh relatif kecil dengan panjang sekitar 2 meter dan berat antara 59-77 kg"</string>
    <string name="name_lumba_atlantik">Lumba - Lumba Samudra Atlantik</string>
    <string name="desc_lumba_atlantik">Jenis lumba-lumba ini cukup besar dengan panjang tubuh antara 2,6 – 4 meter dan berat antara 300 – 500 k"</string>
    <string name="nama">Nama</string>
    <string name="nim">Nim</string>
    <string name="prodi">Prodi</string>
    <string name="kelas">Kelas</string>
    <string name="hobi">Hobi</string>
    <string name="teknik_informatika">Teknik Informatika</string>
    <string name="desain_progreming_i0t">Desain, Progreming , I0T</string>
    <string name="profil">Profil</string>
    <string name="tid">Teknik Informatika - D</string>
</resources>