<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_home2"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txJudul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:text="@string/hewan"
            android:textColor="@color/white"
            android:textSize="19sp" />

        <ImageView
            android:id="@+id/gambarHewan"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginBottom="16dp"
            android:scaleType="fitCenter"
            android:src="@drawable/apis_cerana" />

        <TextView
            android:id="@+id/txJenis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/nama_hewan"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/txAsal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Latin"
            android:textColor="@color/white"
            android:textStyle="italic" />


        <TextView
            android:id="@+id/txDeskripsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/deskripsi_hewan" />

        <Button
            android:id="@+id/btn_back_to_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"
            android:text="@string/kembali" />


    </LinearLayout>
</LinearLayout>