<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_home2"
    tools:context=".MainActivity">

        <ImageView
            android:id="@+id/Profil"
            android:layout_marginTop="80dp"
            android:padding="10dp"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/face"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="vertical"
                >

            <TextView
                android:layout_marginTop="25dp"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold"
                />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nim"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prodi"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kelas"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hobi"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"
            />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Ahmad Arifin Rizki Akbar"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="200602098"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/teknik_informatika"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tid"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/desain_progreming_i0t"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    />

            </LinearLayout>

        </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="230dp"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:textSize="12dp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:text="copyright &#169; Ahmad Arifin Rizki Akbar 2021"
        />

</LinearLayout>